Resolves: tdf#130593 set correct range for spinbutton

Change-Id: I6691f2709aa4053798fcc1744f9f41c3c3866a33